; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/evdev/extr_evdev_utils.c_evdev_push_leds.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/evdev/extr_evdev_utils.c_evdev_push_leds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evdev_dev = type { i32 }

@evdev_led_codes = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evdev_push_leds(%struct.evdev_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.evdev_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.evdev_dev* %0, %struct.evdev_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.evdev_dev*, %struct.evdev_dev** %3, align 8
  %7 = icmp eq %struct.evdev_dev* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %30

9:                                                ; preds = %2
  store i64 0, i64* %5, align 8
  br label %10

10:                                               ; preds = %27, %9
  %11 = load i64, i64* %5, align 8
  %12 = load i32*, i32** @evdev_led_codes, align 8
  %13 = call i64 @nitems(i32* %12)
  %14 = icmp ult i64 %11, %13
  br i1 %14, label %15, label %30

15:                                               ; preds = %10
  %16 = load %struct.evdev_dev*, %struct.evdev_dev** %3, align 8
  %17 = load i32*, i32** @evdev_led_codes, align 8
  %18 = load i64, i64* %5, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i64, i64* %5, align 8
  %23 = trunc i64 %22 to i32
  %24 = shl i32 1, %23
  %25 = and i32 %21, %24
  %26 = call i32 @evdev_push_led(%struct.evdev_dev* %16, i32 %20, i32 %25)
  br label %27

27:                                               ; preds = %15
  %28 = load i64, i64* %5, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %5, align 8
  br label %10

30:                                               ; preds = %8, %10
  ret void
}

declare dso_local i64 @nitems(i32*) #1

declare dso_local i32 @evdev_push_led(%struct.evdev_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
